Fixes for config driven and inject discovered by example app
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>